[package]
name = "ssimulacra2_rs"
version = "0.3.4"
edition = "2021"
description = "Binary exposing the ssimulacra2 rust implementation"
repository = "https://github.com/rust-av/ssimulacra2_bin"
homepage = "https://github.com/rust-av/ssimulacra2_bin"
license = "BSD-2-Clause"
rust-version = "1.61"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
av-metrics-decoders = { version = "0.2.1", features = [
    "vapoursynth",
], optional = true }
clap = { version = "4.0.18", features = ["derive"] }
crossterm = "0.25.0"
image = "0.24.4"
indicatif = "0.17.1"
num-traits = { version = "0.2.15", optional = true }
plotters = { version = "0.3.4", default-features = false, features = [
    "bitmap_backend",
    "area_series",
], optional = true }
ssimulacra2 = "0.3.0"
statrs = { version = "0.16.0", optional = true }

[profile.release]
lto = "thin"
codegen-units = 1

[features]
default = ["video"]
video = ["av-metrics-decoders", "plotters", "statrs", "num-traits"]
