[package]
name = "ssimulacra2_rs"
version = "0.5.2"
edition = "2021"
description = "Binary exposing the ssimulacra2 rust implementation"
repository = "https://github.com/rust-av/ssimulacra2_bin"
homepage = "https://github.com/rust-av/ssimulacra2_bin"
license = "BSD-2-Clause"

# When changing MSRV: Also update .github/workflows/rust.yml
rust-version = "1.74"

[dependencies]
anyhow = "1.0.55"
av-metrics-decoders = { version = "0.3.1", features = [
    "vapoursynth",
    "y4m",
], optional = true }
clap = { version = "4.0.18", features = ["derive"] }
crossterm = "0.27.0"
indicatif = "0.17.1"
jxl-oxide = { version = "0.10.1", features = ["image"] }
num-traits = { version = "0.2.15", optional = true }
ssimulacra2 = { version = "0.5.0", default-features = false }
statrs = { version = "0.17.0", optional = true }

[dependencies.image]
version = "0.25.1"
default-features = false
features = ["png", "jpeg", "webp", "hdr", "exr"]

[dependencies.plotters]
version = "0.3.4"
default-features = false
features = ["bitmap_backend", "area_series", "ttf"]
optional = true

[profile.release]
lto = "thin"
codegen-units = 1

[features]
default = ["video"]
video = ["av-metrics-decoders", "plotters", "statrs", "num-traits"]
